--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,14 +12,30 @@
     /* padding: 0 2rem; */
 }
 
-h1 {
-    margin: 50px;
+.float-bar-title{
+    position: absolute;
+    width: 95%;
+    height: 5rem;
+    margin: -25px 0px 0 60px;
+    /* display: solid; */
+    border-radius: 5px;
+    /* justify-content: space-between; */
+    align-items: center;
+    background: rgb(241, 253, 255);
+}
+
+.float-bar-title h1{
+    align-items: center;
+}
+
+h2 {
+    margin: 0px 50px 20px 0px;
     color: white;
     text-align: left;
 }
 
 img {
-    width: 50px;
-    height: 50px;
-    margin: 0px 0px 0px 30px;
+    width: 40px;
+    height: 40px;
+    margin: -20px 0px 0px 60px;
 }
