--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,10 +1,155 @@
 .main-body{
-  background-color: #464d5a;
+  background: #97a2b4;
   min-height: 100vh;
+  position: flex;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* font-size: calc(10px + 2vmin); */
+  /* color: white; */
 }
+
+.wrap-content{
+  position: absolute;
+  width: 98%;
+  height: 45rem;
+  margin: -50px 0px 0 0px;
+  /* display: solid; */
+  border-radius: 5px;
+  /* justify-content: space-between; */
+  align-items: center;
+  background: rgb(241, 253, 255);
+}
+
+.wrap-content div button{
+  background-color: aqua;
+  border-radius: 5px;
+  height: 40px;
+  width: 200px;
+  margin-top: 10px;
+}
+
+.section-a{
+  position: flex;
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 300px 0 300px;
+}
+
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {
+  .section-a{
+    position: flex;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 50px 0 50px;
+  }
+
+  .section-a h3{
+    font-size: small;
+  }
+
+  .wrap-content div button{
+    background-color: aqua;
+    border-radius: 5px;
+    height: 40px;
+    width: 120px;
+    margin-top: 10px;
+  }
+
+  .wrap-content{
+    width: 93%;
+    height: 20rem;
+    margin: -470px 0px 0 5px;
+    /* display: solid; */
+    border-radius: 5px;
+    /* justify-content: space-between; */
+    align-items: center;
+    background: rgb(241, 253, 255);
+  }
+ }
+
+ /* Small devices (portrait tablets and large phones, 600px and up) */
+ @media only screen and (min-width: 600px) {
+
+ }
+ 
+ /* Medium devices (landscape tablets, 768px and up) */
+ @media only screen and (min-width: 768px) {
+
+ }
+ 
+ /* Large devices (laptops/desktops, 992px and up) */
+ @media only screen and (min-width: 992px) {
+
+ }
+ 
+ /* Extra large devices (large laptops and desktops, 1200px and up) */
+ @media only screen and (min-width: 1200px) {
+
+ } 
+
+/* @media (max-width: 680px) {
+  .section-a{
+    position: flex;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 50px 0 50px;
+  }
+
+  .section-a h3{
+    font-size: small;
+  }
+
+  .wrap-content div button{
+    background-color: aqua;
+    border-radius: 5px;
+    height: 40px;
+    width: 120px;
+    margin-top: 10px;
+  }
+
+  .wrap-content{
+    width: 93%;
+    height: 40rem;
+    margin: -50px 0px 0 5px;
+ 
+    border-radius: 5px;
+   
+    align-items: center;
+    background: rgb(241, 253, 255);
+  }
+} */
+
+/* @media (max-width: 565px) {
+  .section-a{
+    position: flex;
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 30px 0 30px;
+  }
+
+  .section-a h3{
+    font-size: small;
+  }
+
+  .wrap-content div button{
+    background-color: aqua;
+    border-radius: 5px;
+    height: 40px;
+    width: 90px;
+    margin-top: 10px;
+  }
+
+  .wrap-content{
+    width: 93%;
+    height: 40rem;
+    margin: -50px 0px 0 5px;
+ 
+    border-radius: 5px;
+   
+    align-items: center;
+    background: rgb(241, 253, 255);
+  }
+} */
