--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -14,7 +14,7 @@
 
 .float-bar-title{
     position: absolute;
-    width: 95%;
+    width: 100%;
     height: 5rem;
     margin: -25px 0px 0 60px;
     /* display: solid; */
@@ -38,4 +38,60 @@ img {
     width: 40px;
     height: 40px;
     margin: -20px 0px 0px 60px;
+}
+
+@media only screen and (max-width: 600px) {
+    .main-header {
+        position: flex;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 4rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background: rgb(79, 198, 219);
+    }
+    .float-bar-title{
+        height: 3.5rem;
+        width: 95%;
+        margin: -15px 0px 0 15px;
+    }
+
+    .float-bar-title h1{
+        margin-top: 15px;
+        align-items: center;
+        font-size: 23px;
+    }
+
+    img {
+        width: 25px;
+        height: 25px;
+        margin: -20px 0px 0px 20px;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .float-bar-title{
+        width: 91%;
+    }
+} 
+
+@media only screen and (min-width: 768px) {
+    .float-bar-title{
+        width: 93%;
+    }
+} 
+
+@media only screen and (min-width: 992px) {
+    .float-bar-title{
+        width: 94%;
+    }
+} 
+
+@media only screen and (min-width: 1200px) {
+    .float-bar-title{
+        width: 98%;
+        margin: -25px 0px 0 20px;
+    }
 }
