--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,22 +1,16 @@
 .main-header {
-    /* display: flex; */
-    position: flex;
     top: 0;
     left: 0;
     width: 100%;
-    height: 7rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 2.5rem;
     background: rgb(79, 198, 219);
-    /* padding: 0 2rem; */
 }
 
 .float-bar-title{
     position: absolute;
     width: 100%;
     height: 5rem;
-    margin: -25px 0px 0 60px;
+    /* margin: -25px 0px 0 60px; */
     /* display: solid; */
     border-radius: 5px;
     /* justify-content: space-between; */
@@ -25,13 +19,15 @@
 }
 
 .float-bar-title h1{
-    align-items: center;
+    /* align-items: center; */
+    text-align: center;
+    margin: revert;
 }
 
-h2 {
-    margin: 0px 50px 20px 0px;
+.text-admin {
+    margin: -4rem 1rem 0 0;
+    float: right;
     color: white;
-    text-align: left;
 }
 
 img {
@@ -92,6 +88,6 @@ img {
 @media only screen and (min-width: 1200px) {
     .float-bar-title{
         width: 98%;
-        margin: -25px 0px 0 20px;
+        margin: 10px 0px 0 20px;
     }
 }
