--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -23,11 +23,31 @@
 }
 
 .wrap-content div button{
-  background-color: aqua;
+  background-color: rgb(79, 198, 219);
   border-radius: 5px;
   height: 40px;
   width: 200px;
   margin-top: 10px;
+  color: black;
+  border-color: rgb(79, 198, 219);
+}
+
+.card-head-body{
+  background-color: rgb(79, 198, 219);
+  width: 98%;
+  height: 90px;
+  border-radius: 5px;
+  /* text-align: center; */
+  margin: 60px 20px ;
+}
+.card-head-body p{
+  margin: 15px 0px 0px 20px;
+}
+
+.text-atas{
+  padding-top: 10px;
+  font-weight: bold;
+  font-size: large;
 }
 
 .section-a{
@@ -50,13 +70,13 @@
     font-size: small;
   }
 
-  .wrap-content div button{
+  /* .wrap-content div button{
     background-color: aqua;
     border-radius: 5px;
     height: 40px;
     width: 120px;
     margin-top: 10px;
-  }
+  } */
 
   .wrap-content{
     width: 93%;
