--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -6,15 +6,68 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
   /* font-size: calc(10px + 2vmin); */
   /* color: white; */
 }
 
+.head-table{
+  display: flex;
+  justify-content:left;
+}
+
+.txt1{
+  position: flex;
+  display: flex;
+  margin-left: 35px;
+  margin-right: -30px;
+}
+
+.txt2{
+  position: flex;
+  display: flex;
+  margin-left: 10px;
+}
+
+.search-bar{
+  margin-left: 1200px;
+}
+
+.body-table{
+  position: flex;
+  text-align: center;
+  width: 96%;
+  margin-left: 35px;
+  text-align: center;
+  height: 100%;
+}
+
+.footer-table{
+  position: flex;
+  justify-content: space-between;
+}
+
+.pagination{
+  float: right;
+  margin-right: 35px;
+}
+
+.txt-footer-table{
+  margin-left: 35px;
+  float: left;
+}
+
+.select-menu-show{
+  width: 5rem;
+  margin: 0px 0px 10px 35px;
+  float: left;
+}
+
 .wrap-content{
-  position: absolute;
+  position: relative;
   width: 98%;
-  height: 45rem;
-  margin: -50px 0px 0 0px;
+  height: auto;
+  margin: 100px 0px 0 0px;
   /* display: solid; */
   border-radius: 5px;
   /* justify-content: space-between; */
