--- a/src/components/ButttonNavbar.css
+++ b/src/components/ButttonNavbar.css
@@ -2,6 +2,17 @@
   margin: 50px 10px 10px 5px;
   /* padding-right: 10px; */
 }
+
 .btn-navbar2{
   margin: 0px 10px 0px 5px;
+}
+
+.btn-expo{
+  color: red;
+  margin-left: -175px;
+}
+
+.txt-expo{
+  /* text-align: center; */
+  margin-top: -22px;
 }
