--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,10 +11,11 @@
     width: 100%;
     height: 5rem;
     /* margin: -25px 0px 0 60px; */
-    /* display: solid; */
+    display: flex;
     border-radius: 5px;
     /* justify-content: space-between; */
     align-items: center;
+    padding-left: 45%;
     background: rgb(241, 253, 255);
 }
 
