--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   height: 100%;
   /* font-size: calc(10px + 2vmin); */
   /* color: white; */
