--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -5,21 +5,33 @@
 }
 
 .form-login{
-  justify-content: center;
-  /* width: 1000px; */
+  position: content;
   margin: 200px 500px ;
   background-color: rgb(226, 226, 226);
   border-radius: 40px;
   padding: 30px;
 }
 
-.txt1{
-  /* vertical-align: middle; */
-  margin-right: 2rem;
+.form-login2{
+  position: content;
+  padding-left: 25rem;
 }
 
+.btn-login{
+  margin-left: 5.5rem;
+}
+
+.up-txt{
+  text-align: middle;
+  margin-left: 0.5rem;
+}
+
+/* .txt1{
+  text-align: center;
+  margin-left: 10rem;
+} */
+
 .form-login h1{
-  margin: 0 0 50px 250px;
-  /* align-items: center; */
+  margin: 0 0 50px 145px;
 }
 
