--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,30 +5,31 @@
     height: 2.5rem;
     background: rgb(79, 198, 219);
 }
-
+  
 .float-bar-title{
     position: absolute;
-    width: 100%;
+    width: 98.5%;
     height: 5rem;
-    /* margin: -25px 0px 0 60px; */
+    margin-left: 1rem;
     display: flex;
     border-radius: 5px;
-    /* justify-content: space-between; */
     align-items: center;
-    padding-left: 45%;
+    padding-left: 44%;
     background: rgb(241, 253, 255);
 }
 
 .float-bar-title h1{
-    /* align-items: center; */
     text-align: center;
-    margin: revert;
 }
 
 .text-admin {
     margin: -4rem 1rem 0 0;
     float: right;
-    color: white;
+    color: black;
+}
+
+.text-admin h2 {
+    font-size: 30px;
 }
 
 img {
@@ -37,58 +38,6 @@ img {
     margin: -20px 0px 0px 60px;
 }
 
-@media only screen and (max-width: 600px) {
-    .main-header {
-        position: flex;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 4rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background: rgb(79, 198, 219);
-    }
-    .float-bar-title{
-        height: 3.5rem;
-        width: 95%;
-        margin: -15px 0px 0 15px;
-    }
-
-    .float-bar-title h1{
-        margin-top: 15px;
-        align-items: center;
-        font-size: 23px;
-    }
-
-    img {
-        width: 25px;
-        height: 25px;
-        margin: -20px 0px 0px 20px;
-    }
-}
-
-@media only screen and (min-width: 600px) {
-    .float-bar-title{
-        width: 91%;
-    }
+@media only screen and (min-width: 601px) {
+    
 } 
-
-@media only screen and (min-width: 768px) {
-    .float-bar-title{
-        width: 93%;
-    }
-} 
-
-@media only screen and (min-width: 992px) {
-    .float-bar-title{
-        width: 94%;
-    }
-} 
-
-@media only screen and (min-width: 1200px) {
-    .float-bar-title{
-        width: 98%;
-        margin: 10px 0px 0 20px;
-    }
-}
